copied files from hof-example-form and changed the name of awesome_form to global_entry

--- a/apps/global_entry/views/first-page.html
+++ b/apps/global_entry/views/first-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step 1 of 3{{/step}}
+{{$step}}{{#t}}pages.first-page.section{{/t}}{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
