--- a/apps/global_entry/views/second-page.html
+++ b/apps/global_entry/views/second-page.html
@@ -21,15 +21,7 @@
 
 {{$form}}
 
-
-<fieldset id="example-dob-group" class="panel-indent {{#errors.example-dob}}validation-error{{/errors.example-dob}}">
-    <h1>These radio buttons toggle a hidden field</h1>
-    {{#radio-group}}yes-no-radio-toggler{{/radio-group}}
-    <h1>Example toggled text input</h1>
-    <div id="example-toggled-text-div">
-        {{#input-text}}example-toggled-text{{/input-text}}
-    </div>
-</fieldset>
+{{#input-text}}passport-number{{/input-text}}
 
 {{#input-submit}}continue{{/input-submit}}
 {{/form}}
