--- a/apps/global_entry/views/confirm.html
+++ b/apps/global_entry/views/confirm.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step 3 of 3{{/step}}
+{{$step}}{{#t}}pages.confirm.section{{/t}}{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
@@ -20,84 +20,41 @@
 {{$form}}
 
 
-<h1>This is an example of a confirmation page</h1>
-<p>You will see on the controller for this page that you are able to specify what to do with the data</p>
+<h1>Check your details before continuing</h1>
 
 <table id="summary" class="table-details">
     <thead>
     </thead>
     <tbody>
     <tr>
-        <td>{{#t}}pages.confirm.table.headers.example-radio{{/t}}</td>
+        <td>{{#t}}pages.confirm.table.headers.british-citizen-radio{{/t}}</td>
         <td>
-            {{values.example-radio}}
+            {{values.british-citizen-radio}}
         </td>
-        <td><a href="first-page/edit#example-radio" class="button" id="example-radio-change">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="first-page/edit#british-citizen-radio" class="button" id="example-radio-change">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     </thead>
     <tbody>
     <tr>
-        <td>{{#t}}pages.confirm.table.headers.example-dob{{/t}}</td>
+        <td>{{#t}}pages.confirm.table.headers.passport-number{{/t}}</td>
         <td>
-            {{values.example-dob-formatted}}
+            {{values.passport-number}}
         </td>
-        <td><a href="first-page/edit#example-dob" class="button">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="second-page/edit#passport-number" class="button">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     <tr>
-        <td>{{#t}}pages.confirm.table.headers.example-text{{/t}}</td>
+        <td>{{#t}}pages.confirm.table.headers.alias-yes-no{{/t}}</td>
         <td>
-            {{values.example-text}}
+            {{values.alias-yes-no}}
         </td>
-        <td><a href="first-page/edit#example-text" class="button">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="third-page/edit#alias-yes-no" class="button">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     <tr>
-        <td>{{#t}}pages.confirm.table.headers.example-email{{/t}}</td>
+        <td>{{#t}}pages.confirm.table.headers.additional-alias{{/t}}</td>
         <td>
-            {{values.example-email}}
+            {{values.additional-alias}}{{^values.additional-alias}}You don’t have any other name{{/values.additional-alias}}
         </td>
-        <td><a href="first-page/edit#example-email" class="button">{{#t}}buttons.change{{/t}}</a></td>
-    </tr>
-    <tr>
-        <td>{{#t}}pages.confirm.table.headers.example-checkbox{{/t}}</td>
-        <td>
-            {{values.example-checkbox}}
-        </td>
-        <td><a href="first-page/edit#example-checkbox" class="button">{{#t}}buttons.change{{/t}}</a></td>
-    </tr>
-    <tr>
-        <td>{{#t}}pages.confirm.table.headers.yes-no-radio-toggler{{/t}}</td>
-        <td>
-            {{values.yes-no-radio-toggler}}
-        </td>
-        <td><a href="second-page/edit#yes-no-radio-toggler" class="button">{{#t}}buttons.change{{/t}}</a></td>
-    </tr>
-    <tr>
-        <td>{{#t}}pages.confirm.table.headers.example-toggled-text{{/t}}</td>
-        <td>
-            {{values.example-toggled-text}}
-        </td>
-        <td><a href="second-page/edit#example-toggled-text" class="button">{{#t}}buttons.change{{/t}}</a></td>
-    </tr>
-    <tr>
-        <td>{{#t}}pages.confirm.table.headers.yes-no-radio{{/t}}</td>
-        <td>
-            {{values.yes-no-radio}}
-        </td>
-        <td><a href="third-page/edit#yes-no-radio" class="button">{{#t}}buttons.change{{/t}}</a></td>
-    </tr>
-    <tr>
-        <td>{{#t}}pages.confirm.table.headers.example-depends-on-text{{/t}}</td>
-        <td>
-            {{values.example-depends-on-text}}
-        </td>
-        <td><a href="third-page/edit#example-depends-on-text" class="button">{{#t}}buttons.change{{/t}}</a></td>
-    </tr>
-    <tr>
-        <td>{{#t}}pages.confirm.table.headers.multiples-input{{/t}}</td>
-        <td>
-            {{values.multiples-input}}
-        </td>
-        <td><a href="fourth-page/edit#multiples-input" class="button">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="third-page/edit#additional-alias" class="button">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     </tbody>
 </table>
