--- a/apps/global_entry/views/second-page.html
+++ b/apps/global_entry/views/second-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step 2 of 3{{/step}}
+{{$step}}Step {{#t}}pages.second-page.section{{/t}} of 3{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
