--- a/apps/global_entry/views/third-page.html
+++ b/apps/global_entry/views/third-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step 3 of 3{{/step}}
+{{$step}}Step {{#t}}pages.third-page.section{{/t}} of 3{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
@@ -22,11 +22,8 @@
 {{$form}}
 
 
-<h1>Just a normal radio button</h1>
-{{#radio-group}}yes-no-radio{{/radio-group}}
-<h1>This text input is required only if the radio button has been answered yes</h1>
-<p>TIP! Use this in conjunction with the toggle feature :)</p>
-{{#input-text}}example-depends-on-text{{/input-text}}
+{{#radio-group}}alias-yes-no{{/radio-group}}
+{{#input-text}}additional-alias{{/input-text}}
 
 {{#input-submit}}continue{{/input-submit}}
 {{/form}}
