--- a/apps/global_entry/views/first-page.html
+++ b/apps/global_entry/views/first-page.html
@@ -20,7 +20,7 @@
 {{<partials-form}}
 {{$form}}
 
-{{#radio-group}}british-citizen-radio{{/radio-group}}
+{{#radio-group}}passportNationality{{/radio-group}}
 
 {{#input-submit}}continue{{/input-submit}}
 {{/form}}
