Fixed field label bug for passport number

--- a/apps/global_entry/views/second-page.html
+++ b/apps/global_entry/views/second-page.html
@@ -30,7 +30,7 @@
 {{/errors.passportExpiry}}
 
 <div class="form-group form-date">
-    <p>{{#t}}pages.second-page.expiry-question{{/t}}</p>
+    <h1>{{#t}}pages.second-page.expiry-question{{/t}}</h1>
     <p class="form-hint">{{#t}}fields.passportExpiry.hint{{/t}}</p>
     {{#input-date}}passportExpiry{{/input-date}}
 </div>
