--- a/apps/global_entry/views/second-page.html
+++ b/apps/global_entry/views/second-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step {{#t}}pages.second-page.section{{/t}} of 3{{/step}}
+{{$step}}Step {{#t}}pages.second-page.section{{/t}} of {{#t}}pages.total-pages{{/t}}{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
@@ -21,19 +21,7 @@
 
 {{$form}}
 
-{{#input-text}}passportNumber{{/input-text}}
-
-{{#errors.passportExpiry}}
-<span id="example-dob-error" class="error-message">
-              {{errors.passportExpiry.message}}
-            </span>
-{{/errors.passportExpiry}}
-
-<div class="form-group form-date">
-    <h1>{{#t}}pages.second-page.expiry-question{{/t}}</h1>
-    <p class="form-hint">{{#t}}fields.passportExpiry.hint{{/t}}</p>
-    {{#input-date}}passportExpiry{{/input-date}}
-</div>
+{{#radio-group}}passportNationality{{/radio-group}}
 
 {{#input-submit}}continue{{/input-submit}}
 {{/form}}
