--- a/apps/global_entry/views/third-page.html
+++ b/apps/global_entry/views/third-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step {{#t}}pages.third-page.section{{/t}} of 3{{/step}}
+{{$step}}Section {{#t}}pages.third-page.section{{/t}} of 3{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
