Section 3 and 4 working - passport details and names

--- a/apps/global_entry/views/fourth-page.html
+++ b/apps/global_entry/views/fourth-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step {{#t}}pages.third-page.section{{/t}} of 3{{/step}}
+{{$step}}Step {{#t}}pages.third-page.section{{/t}} of {{#t}}pages.total-pages{{/t}}{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
@@ -13,16 +13,18 @@
 {{> partials-navigation}}
 {{/propositionHeader}}
 
-{{$header}}{{#t}}pages.third-page.header{{/t}}{{/header}}
-
 {{$content}}
 
 {{<partials-form}}
 
 {{$form}}
 
+{{#input-text}}surname{{/input-text}}
 
-{{#radio-group}}alias-yes-no{{/radio-group}}
+{{#input-text}}givenName{{/input-text}}
+
+
+{{#radio-group}}otherNames{{/radio-group}}
 {{#input-text}}additional-alias{{/input-text}}
 
 {{#input-submit}}continue{{/input-submit}}
