--- a/apps/global_entry/views/third-page.html
+++ b/apps/global_entry/views/third-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Section {{#t}}pages.third-page.section{{/t}} of 3{{/step}}
+{{$step}}Section {{#t}}pages.third-page.section{{/t}} of {{#t}}pages.total-pages{{/t}}{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
@@ -21,9 +21,19 @@
 
 {{$form}}
 
+{{#input-text}}passportNumber{{/input-text}}
 
-{{#radio-group}}alias-yes-no{{/radio-group}}
-{{#input-text}}additional-alias{{/input-text}}
+{{#errors.passportExpiry}}
+<span id="passportExpiry-error" class="error-message">
+              {{errors.passportExpiry.message}}
+            </span>
+{{/errors.passportExpiry}}
+
+<div class="form-group form-date">
+    <h1>{{#t}}pages.third-page.expiry-question{{/t}}</h1>
+    <p class="form-hint">{{#t}}fields.passportExpiry.hint{{/t}}</p>
+    {{#input-date}}passportExpiry{{/input-date}}
+</div>
 
 {{#input-submit}}continue{{/input-submit}}
 {{/form}}
