6th page - email added and translation files working

--- a/apps/global_entry/views/sixth-page.html
+++ b/apps/global_entry/views/sixth-page.html
@@ -19,7 +19,7 @@
 
 {{$form}}
 
-<!--{{#input-text}}email{{/input-text}}-->
+{{#input-text}}email{{/input-text}}
 
 {{#input-submit}}continue{{/input-submit}}
 {{/form}}
