added some forking and changed the names of some templates to be like GE

--- a/apps/global_entry/views/confirm.html
+++ b/apps/global_entry/views/confirm.html
@@ -38,21 +38,21 @@
         <td>
             {{values.criminalConvictions}}
         </td>
-        <td><a href="second-page/edit#criminalConvictions" class="button">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="restrictions/edit#criminalConvictions" class="button">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     <tr>
         <td>{{#t}}pages.confirm.table.headers.refusedEntry{{/t}}</td>
         <td>
             {{values.refusedEntry}}
         </td>
-        <td><a href="second-page/edit#refusedEntry" class="button">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="restrictions/edit#refusedEntry" class="button">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     <tr>
         <td>{{#t}}pages.confirm.table.headers.customsPenalties{{/t}}</td>
         <td>
             {{values.customsPenalties}}
         </td>
-        <td><a href="second-page/edit#customsPenalties" class="button">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="restrictions/edit#customsPenalties" class="button">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     <tr>
         <td>{{#t}}pages.confirm.table.headers.passportNumber{{/t}}</td>
