--- a/apps/global_entry/views/restrictions.html
+++ b/apps/global_entry/views/restrictions.html
@@ -1,5 +1,9 @@
 {{<layout}}
-{{$step}}Section {{#t}}pages.second-page.section{{/t}} of {{#t}}pages.total-pages{{/t}}{{/step}}
+{{$step}} {{#t}}pages.restrictions.section{{/t}} {{#t}}pages.total-pages{{/t}}{{/step}}
+
+{{$journeyHeader}}
+{{#t}}journey.header{{/t}}
+{{/journeyHeader}}
 
 {{$validationSummary}}
 {{> partials-validation-summary}}
@@ -9,7 +13,7 @@
 {{> partials-navigation}}
 {{/propositionHeader}}
 
-{{$header}}{{#t}}pages.second-page.header{{/t}}{{/header}}
+{{$header}}{{#t}}pages.restrictions.header{{/t}}{{/header}}
 
 {{$content}}
 
