--- a/apps/global_entry/views/third-page.html
+++ b/apps/global_entry/views/third-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Section {{#t}}pages.third-page.section{{/t}} of {{#t}}pages.total-pages{{/t}}{{/step}}
+{{$step}}{{#t}}pages.third-page.section{{/t}} {{#t}}pages.total-pages{{/t}}{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
