--- a/apps/global_entry/views/fourth-page.html
+++ b/apps/global_entry/views/fourth-page.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Step {{#t}}pages.fourth-page.section{{/t}} of {{#t}}pages.total-pages{{/t}}{{/step}}
+{{$step}} {{#t}}pages.fourth-page.section{{/t}} {{#t}}pages.total-pages{{/t}}{{/step}}
 
 {{$journeyHeader}}
 {{#t}}journey.header{{/t}}
