attempting to make the passportNationality page more accessible.  The idea is to have a legend and then hint text than the radio buttons but to be able to use different Css classes for these.  The validation is not working

--- a/apps/global_entry/views/confirm.html
+++ b/apps/global_entry/views/confirm.html
@@ -31,7 +31,7 @@
         <td>
             {{#t}}pages.confirm.nationality{{/t}}
         </td>
-        <td><a href="first-page/edit#passportNationality" class="button" id="passportNationality-change">{{#t}}buttons.change{{/t}}</a></td>
+        <td><a href="passportNationality/edit#passportNationality" class="button" id="passportNationality-change">{{#t}}buttons.change{{/t}}</a></td>
     </tr>
     <tr>
         <td>{{#t}}pages.confirm.table.headers.criminalConvictions{{/t}}</td>
