--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -102,6 +102,9 @@ h1 {
   width: 100%;
 }
 
+.newLine{
+  display: block;
+}
 
 .table-details {
   width: 100%;
@@ -124,4 +127,5 @@ h1 {
     background: #dde0e1;
     color: #000;
   }
+
 }
